# chat-mm

./: .gitignore  README.md  idea.md  idea_qwen.md  package-lock.json  package.json  requirements.txt
backend/: .env.example  create_index.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  app.py  config.py
backend/app/routes/: chat_routes.py
backend/app/services/: llm_service.py  personas.py  rag_service.py
backend/backend_venv/: pyvenv.cfg
backend/documents/: sample.txt
frontend/: .env.development  .sassrc.js  index.html  jsconfig.json  package-lock.json  package.json  start.cjs  vite.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx  index.js  main.jsx  polyfills.js
frontend/src/components/: ChatWindow.jsx  Header.jsx  Message.jsx  Sidebar.jsx
frontend/src/components/icons/: BotIcon.jsx
frontend/src/config/: models.js
frontend/src/icons/: BotIcon.jsx
frontend/src/services/: socketContext.jsx
frontend/src/styles/: global.scss  variables.scss
frontend/src/theme/: ThemeProvider.jsx
